avformat/hls: do not limit manifest lines to 1024 chars

Fixes Ticket2976
Debuged-by: jaimeMF
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>